@@ -10,7 +10,6 @@ describe ExcelToRuby do
     command = ExcelToRuby.new
     command.excel_file = excel
     command.xml_directory = File.join(actual,'xml')
-    command.intermediate_directory = File.join(actual,'intermediate')
     command.output_directory = File.join(actual,'ruby')
     command.output_name = "RubyExampleSpreadsheet"
     #command.cells_that_can_be_set_at_runtime = {
