@@ -1,6 +1,7 @@
 # Head
 
 - Removed the run_in_memory option, it no longer does anything.
+- Remmoved the intermediate_directory option, the code no longer needs to write intermediate files
 
 # 0.2.2 - 2013 December 29th
 
